--- a/_sass/jekyll-wgdd/_footer.scss
+++ b/_sass/jekyll-wgdd/_footer.scss
@@ -1,14 +1,17 @@
 .page-footer {
   display: block;
-  position: fixed;
-  bottom: 0;
-  left: 0;
   width: 100%;
   padding: $foot-padding-bottom 5px;
   background-image: linear-gradient($page-background-color, $foot-background-color);
   //background-color: $foot-background-color;
   z-index: $footer-z-index;
   height: $foot-height;
+
+  @media (min-width: 600px) {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+  }
 
   .page-navigation-footer-control,
   .page-navigation-footer-title {
