--- a/_sass/jekyll-wgdd/_nav.scss
+++ b/_sass/jekyll-wgdd/_nav.scss
@@ -22,7 +22,7 @@ nav.page-navigation-main {
     padding-top: $nav-button-size;
     background: white 10px 10px / 20px 20px no-repeat;
     margin-top: $nav-button-padding;
-    margin-left: 2*$nav-button-padding - 1;
+    margin-left: 2*$nav-button-padding;
     border: 1px solid #ccc;
     background-image: -webkit-repeating-linear-gradient(#ccc, #ccc 2px, #fff 2px, #fff 4px);
     background-image: repeating-linear-gradient(#ccc, #ccc 2px, #fff 2px, #fff 4px);
@@ -36,13 +36,17 @@ nav.page-navigation-main {
     &:checked {
       position: fixed;
       top: 0;
-      left: 0;
-      //margin-left: $nav-button-padding;
+      right: 2*$nav-button-padding;
       z-index: $navbar-z-index + 10000;
       background-image: linear-gradient(45deg, transparent 13px, #ccc 13px, #ccc 15px, transparent 0),
                         linear-gradient(-45deg, white 13px, #ccc 13px, #ccc 15px, white 0);
       @extend %header-box-shadow;
       transition: 0.3s;
+
+      /*@media (min-width: 800px) {
+        left: 0;
+        margin-right: $nav-button-padding;
+      }*/
 
       & ~ .page-navigation-main-container {
         display: block;
@@ -97,6 +101,7 @@ nav.page-navigation-main {
         font-weight: bold;
 
         @media (max-width: 800px) {
+          flex: 50%;
           max-width: 50%;
         }
 
