--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
 <div class="page-title" id="page-title">
 <span class="page-title-label">
-<a href="{{ site.baseurl | absolute_url }}" title="{{ site.title }}"><i class="fas fa-home"></i>
+<a href="{{ site.baseurl }}" title="{{ site.title }}"><i class="fas fa-home"></i>
 </a>
 </span>
 
