--- a/_sass/jekyll-wgdd/_nav.scss
+++ b/_sass/jekyll-wgdd/_nav.scss
@@ -2,7 +2,6 @@ nav.page-navigation-main {
   position: fixed !important;
   top: 0;
   left: 0;
-  padding-left: 1px;
   z-index: $navbar-z-index;
   height: 100%;
   width: 0;
@@ -36,17 +35,11 @@ nav.page-navigation-main {
     &:checked {
       position: fixed;
       top: 0;
-      right: 2*$nav-button-padding;
       z-index: $navbar-z-index + 10000;
       background-image: linear-gradient(45deg, transparent 13px, #ccc 13px, #ccc 15px, transparent 0),
                         linear-gradient(-45deg, white 13px, #ccc 13px, #ccc 15px, white 0);
       @extend %header-box-shadow;
       transition: 0.3s;
-
-      /*@media (min-width: 800px) {
-        left: 0;
-        margin-right: $nav-button-padding;
-      }*/
 
       & ~ .page-navigation-main-container {
         display: block;
@@ -82,6 +75,7 @@ nav.page-navigation-main {
       background-color: $nav-background-color;
       padding-top: 2*$nav-button-padding + $nav-button-size;
       padding-bottom: 1rem;
+      padding-left: 4*$nav-button-padding + $nav-button-size;
       transition: 1s;
       width: 100%;
 
@@ -94,15 +88,18 @@ nav.page-navigation-main {
 
       > li {
         display: block;
-        align-content: space-between;
+        //align-content: space-between;
         flex: auto;
-        max-width: 20%;
+        max-width: 25%;
         height: auto;
         font-weight: bold;
 
         @media (max-width: 800px) {
-          flex: 50%;
           max-width: 50%;
+        }
+
+        @media (max-width: 400px) {
+          max-width: 100%;
         }
 
         button {
@@ -117,12 +114,11 @@ nav.page-navigation-main {
           width: 100%;
           text-align: left;
           line-height: initial;
-          border-style: outset;
         }
 
         button, a {
           display: block;
-          padding: 5px 0 5px 2*$nav-button-padding;
+          padding: 5px 0;
           color: inherit;
           text-decoration: none;
 
@@ -135,6 +131,7 @@ nav.page-navigation-main {
           list-style-type: none;
           border-left: 1px solid #ccc;
           font-weight: normal;
+          padding-left: 5px;
         }
 
       }
