Set aria-hidden for the icon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,7 @@
 
 <div class="page-title" id="page-title">
 <span class="page-title-label">
-<a href="{{ site.url | absolute_url }}" title="{{ site.title }}"><i class="fas fa-home"></i>
-</a>
+<a href="{{ site.url | absolute_url }}" title="{{ site.title }}"><i class="fas fa-home" aria-hidden="true"></i></a>
 </span>
 
 {% if site.data.navigation["header"] %}
